force-app/main/default/objects/Country_Price__c/Country_Price__c.object-meta.xml
<CustomObject>
    <label>Country Price</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Country Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>