force-app/main/default/objects/Country_Price__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Country Prices</relationshipLabel>
    <relationshipName>Country_Prices1</relationshipName>
    <type>Lookup</type>
</CustomField>