force-app/main/default/objects/Country_Price__c/fields/price_for_deadline_2__c.field-meta.xml
<CustomField>
    <fullName>price_for_deadline_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>2020-03-28_2020-09-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>