force-app/main/default/objects/Country_Price__c/fields/price_for_deadline_3__c.field-meta.xml
<CustomField>
    <fullName>price_for_deadline_3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>2020-10-01_2020-12-31</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>