force-app/main/default/objects/Country_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Region__c</columns>
    <columns>price_for_deadline_1__c</columns>
    <columns>price_for_deadline_2__c</columns>
    <columns>price_for_deadline_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>